--- a/facturacion.html
+++ b/facturacion.html
@@ -78,7 +78,7 @@
           <label for="cvv">CVV:</label>
           <input type="text" id="cvv" required>
       </div>
-      <button type="submit">Pagar Multa</button>
+      <button type="submit">Pagar Multas</button>
   </form>
 </div>
 
@@ -116,4 +116,5 @@
   });
 </script>
 </body>
+
 </html>
