--- a/GestionBiblioteca.html
+++ b/GestionBiblioteca.html
@@ -380,7 +380,7 @@
                 localStorage.setItem("loanRequests", JSON.stringify(loanRequests));
 
                 showNotification("Solicitud de préstamo enviada al administrador");
-                showBooks(); // Actualizar la lista de libros
+                showBooks(); // Actualizar la lista de libro
             } else {
                 showNotification("El libro no está disponible para préstamo", "error");
             }
